--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:title" content="武漢肺炎（新型冠狀病毒）確診案例地圖" />
-    <meta property="og:description" content="全球感染武漢肺炎（新型冠狀病毒）不治病例今天突破 3 萬例，183 個國家和地區通報確診感染超過 64 萬 770 例，至少 13 萬 600 人被視為痊癒。" />
+    <meta property="og:description" content="2019 新型冠狀病毒（COVID-19）擴散全球，確診病例超過億人，死亡數超過 300 萬人，各國紛紛祭出防疫政策，試圖阻止疫情蔓延。" />
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:type" content="website" />
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400,700&display=swap" rel="stylesheet">
@@ -254,8 +254,8 @@
         </svg>
     </div>
     <div id="tooltip"></div>
-    <script src='https://code.jquery.com/jquery-3.4.1.min.js' defer></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js' defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="js/covid-19-cases.js" defer></script>
 </body>
 </html>
